feat: creates api to update book
